[package]
name = "emcache"
version = "0.1.0"
authors = ["Martin Matusiak"]

[dependencies]
bufstream = "0.1.1"  # for buffered tcp streams
docopt = "0.6.78"  # cmdline arguments
libc = "0.2"
linked-hash-map = "0.0.9"  # hashmap that remembers order of insertion
net2 = "0.2.20"  # support for setting socket options
rustc-serialize = "0.3.16"  # needed for docopt
time = "0.1"  # timing primitives in unix time
# Testing related
maplit = "0.1.2"  # hashmap literals
rand = "0.3"  # random number generator
